[tool.poetry]
name = "blink"
version = "0.1.0"
description = "Sparse matrices for noisy data."
authors = ["dgct <d@tree.casa>"]
license = "Modified BSD"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.20.3"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
